g1相关以及reference 使用